criacao dos endpoints e documentacao